// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColumnDimensionsField snapshots > should render the "Hug" text when hugging and not hovered 1`] = `
<DocumentFragment>
  <div
    class="_TextField_bd2800"
  >
    <div
      class="_TextFieldWrapper_9a3a67 _TextFieldWrapper--filled_9a3a67"
      data-test-text-field="width"
    >
      <div
        class="ScrubbableInput"
      >
        <div
          class="_InputAdornment_bfc2de"
        >
          W
        </div>
      </div>
      <input
        aria-label="Width"
        class="_TextFieldWrapper__input_9a3a67"
        data-test-bypass-global-shortcuts="true"
        data-test-text-field-input="width"
        type="number"
        value="326"
      />
      <span
        class="_TextFieldWrapper__endAdornment_9a3a67"
      >
        <span
          class="_ColumnDimensionsField__hugLabel_85b29c"
        >
          Hug
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnDimensionsField snapshots > should render the field with its label and value 1`] = `
<DocumentFragment>
  <div
    class="_TextField_bd2800"
  >
    <div
      class="_TextFieldWrapper_9a3a67 _TextFieldWrapper--filled_9a3a67"
      data-test-text-field="width"
    >
      <div
        class="ScrubbableInput"
      >
        <div
          class="_InputAdornment_bfc2de"
        >
          W
        </div>
      </div>
      <input
        aria-label="Width"
        class="_TextFieldWrapper__input_9a3a67"
        data-test-bypass-global-shortcuts="true"
        data-test-text-field-input="width"
        type="number"
        value="326"
      />
      <span
        class="_TextFieldWrapper__endAdornment_9a3a67"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnDimensionsField snapshots > should render the sizing-mode chevron when a sizing mode is given 1`] = `
<DocumentFragment>
  <div
    class="_TextField_bd2800"
  >
    <div
      class="_TextFieldWrapper_9a3a67 _TextFieldWrapper--filled_9a3a67"
      data-test-text-field="width"
    >
      <div
        class="ScrubbableInput"
      >
        <div
          class="_InputAdornment_bfc2de"
        >
          W
        </div>
      </div>
      <input
        aria-label="Width"
        class="_TextFieldWrapper__input_9a3a67"
        data-test-bypass-global-shortcuts="true"
        data-test-text-field-input="width"
        type="number"
        value="326"
      />
      <span
        class="_TextFieldWrapper__endAdornment_9a3a67"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Width sizing options"
          class="_ButtonMenu_7516ba"
          data-state="closed"
          type="button"
        >
          <svg
            class="Icon"
            data-fpl-icon-size="24"
            fill="none"
            height="10"
            style="color: var(--color-neutral-1);"
            viewBox="0 0 24 24"
            width="10"
          >
            <path
              clip-rule="evenodd"
              d="M9.646 11.146a.5.5 0 0 1 .708 0L12 12.793l1.646-1.647a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 0-.708"
              data-svg-property="fill"
              fill="white"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
